<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/CLo"
        android:layout_width="84sp"
        android:layout_height="250sp"
        android:background="@color/ButtonColor"
        android:minHeight="0sp"
        android:soundEffectsEnabled="false"
        android:stateListAnimator="@null"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/D"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/CSharp"
        android:layout_width="45sp"
        android:layout_height="154sp"
        android:layout_marginStart="63sp"
        android:layout_marginLeft="63sp"
        android:background="@color/ButtonColor2"
        android:text="@string/none"
        android:minHeight="0sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/D"
        android:soundEffectsEnabled="false"/>

    <Button
        android:id="@+id/D"
        android:layout_width="84sp"
        android:layout_height="250sp"
        android:layout_marginStart="1sp"
        android:layout_marginLeft="1sp"
        android:background="@color/ButtonColor"
        android:minHeight="0sp"
        android:soundEffectsEnabled="false"
        android:stateListAnimator="@null"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/E"
        app:layout_constraintStart_toEndOf="@+id/CLo" />

    <Button
        android:id="@+id/DSharp"
        android:layout_width="45sp"
        android:layout_height="154sp"
        android:layout_marginStart="41sp"
        android:layout_marginLeft="41sp"
        android:background="@color/ButtonColor2"
        android:text="@string/none"
        android:minHeight="0sp"
        app:layout_constraintStart_toEndOf="@id/CSharp"
        app:layout_constraintTop_toTopOf="@+id/E"
        android:soundEffectsEnabled="false"/>

    <Button
        android:id="@+id/E"
        android:layout_width="84sp"
        android:layout_height="250sp"
        android:layout_marginStart="1sp"
        android:layout_marginLeft="1sp"
        android:background="@color/ButtonColor"
        android:minHeight="0sp"
        android:soundEffectsEnabled="false"
        android:stateListAnimator="@null"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/F"
        app:layout_constraintStart_toEndOf="@+id/D" />

    <Button
        android:id="@+id/F"
        android:layout_width="84sp"
        android:layout_height="250sp"
        android:layout_marginStart="1sp"
        android:layout_marginLeft="1sp"
        android:background="@color/ButtonColor"
        android:minHeight="0sp"
        android:soundEffectsEnabled="false"
        android:stateListAnimator="@null"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/G"
        app:layout_constraintStart_toEndOf="@+id/E" />

    <Button
        android:id="@+id/FSharp"
        android:layout_width="45sp"
        android:layout_height="154sp"
        android:layout_marginStart="127sp"
        android:layout_marginLeft="127sp"
        android:background="@color/ButtonColor2"
        android:text="@string/none"
        android:minHeight="0sp"
        app:layout_constraintStart_toEndOf="@+id/DSharp"
        app:layout_constraintTop_toTopOf="@+id/G"
        android:soundEffectsEnabled="false"/>

    <Button
        android:id="@+id/G"
        android:layout_width="84sp"
        android:layout_height="250sp"
        android:layout_marginStart="1sp"
        android:layout_marginLeft="1sp"
        android:background="@color/ButtonColor"
        android:minHeight="0sp"
        android:soundEffectsEnabled="false"
        android:stateListAnimator="@null"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/A"
        app:layout_constraintStart_toEndOf="@+id/F" />

    <Button
        android:id="@+id/GSharp"
        android:layout_width="45sp"
        android:layout_height="154sp"
        android:layout_marginStart="41sp"
        android:layout_marginLeft="41sp"
        android:background="@color/ButtonColor2"
        android:text="@string/none"
        android:minHeight="0sp"
        app:layout_constraintStart_toEndOf="@+id/FSharp"
        app:layout_constraintTop_toTopOf="@+id/A"
        android:soundEffectsEnabled="false"/>

    <Button
        android:id="@+id/A"
        android:layout_width="84sp"
        android:layout_height="250sp"
        android:layout_marginStart="1sp"
        android:layout_marginLeft="1sp"
        android:background="@color/ButtonColor"
        android:minHeight="0sp"
        android:soundEffectsEnabled="false"
        android:stateListAnimator="@null"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/B"
        app:layout_constraintStart_toEndOf="@+id/G" />

    <Button
        android:id="@+id/ASharp"
        android:layout_width="45sp"
        android:layout_height="154sp"
        android:layout_marginStart="41sp"
        android:layout_marginLeft="41sp"
        android:background="@color/ButtonColor2"
        android:text="@string/none"
        android:minHeight="0sp"
        app:layout_constraintStart_toEndOf="@+id/GSharp"
        app:layout_constraintTop_toTopOf="@+id/B"
        android:soundEffectsEnabled="false"/>

    <Button
        android:id="@+id/B"
        android:layout_width="84sp"
        android:layout_height="250sp"
        android:layout_marginStart="1sp"
        android:layout_marginLeft="1sp"
        android:background="@color/ButtonColor"
        android:minHeight="0sp"
        android:soundEffectsEnabled="false"
        android:stateListAnimator="@null"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/CHi"
        app:layout_constraintStart_toEndOf="@+id/A" />

    <Button
        android:id="@+id/CHi"
        android:layout_width="84sp"
        android:layout_height="250sp"
        android:layout_marginStart="1sp"
        android:layout_marginLeft="1sp"
        android:background="@color/ButtonColor"
        android:minHeight="0sp"
        android:soundEffectsEnabled="false"
        android:text="@string/none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/B" />

    <Button
        android:id="@+id/Menu"
        android:layout_width="75sp"
        android:layout_height="60sp"
        android:background="@color/MenuButtons"
        android:minHeight="0sp"
        android:text="@string/Menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Record"
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:layout_marginTop="15sp"
        android:layout_marginEnd="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/round_button_red"
        android:minHeight="0sp"
        android:text="@string/none"
        app:layout_constraintEnd_toStartOf="@+id/StartOver"
        app:layout_constraintTop_toTopOf="parent" />
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="321dp" />

    <Button
        android:id="@+id/StartOver"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:background="@android:drawable/ic_media_previous"
        android:backgroundTint="@color/ButtonColor2"
        android:minHeight="0sp"
        android:text="@string/none"
        app:layout_constraintEnd_toStartOf="@+id/Play"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Play"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginEnd="60dp"
        android:layout_marginRight="60dp"
        android:background="@drawable/play"
        android:minHeight="0sp"
        android:text="@string/none"
        app:layout_constraintEnd_toStartOf="@+id/Help"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Help"
        android:layout_width="75sp"
        android:layout_height="60sp"
        android:background="@color/MenuButtons"
        android:minHeight="0sp"
        android:text="@string/Help"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        android:layout_width="201sp"
        android:layout_height="60sp"
        android:layout_marginStart="83dp"
        android:layout_marginLeft="83dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toStartOf="@+id/Record"
        app:layout_constraintStart_toEndOf="@+id/Menu"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>