<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">

    <Button
        android:id="@+id/nextActivityButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="129dp"
        android:layout_height="324dp"
        android:layout_marginStart="307dp"
        android:layout_marginLeft="307dp"
        android:layout_marginEnd="295dp"
        android:layout_marginRight="295dp"
        android:text="Go to Instrument"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBar" />

    <Button
        android:id="@+id/helpButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="294dp"
        android:layout_height="133dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/Help"
        app:layout_constraintBottom_toTopOf="@+id/colorButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/nextActivityButton"
        app:layout_constraintTop_toBottomOf="@+id/logoBar" />

    <Button
        android:id="@+id/ChooseInstrument"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="305dp"
        android:layout_height="132dp"
        android:layout_marginBottom="135dp"
        android:text="Switch Instrument"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextActivityButton"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoBar"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logoBar"
        android:layout_width="730dp"
        android:layout_height="88dp"
        android:layout_marginBottom="323dp"
        android:contentDescription="welcom to tapband"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@color/colorPrimary" />

    <ImageView
        android:id="@+id/instrumentView"
        android:layout_width="306dp"
        android:layout_height="167dp"
        android:layout_marginBottom="23dp"
        android:contentDescription="image of instrument"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nextActivityButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ChooseInstrument"
        app:srcCompat="@drawable/piano"
        tools:srcCompat="@drawable/piano" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="544dp"
        android:layout_height="74dp"
        android:layout_marginStart="93dp"
        android:layout_marginLeft="93dp"
        android:layout_marginEnd="94dp"
        android:layout_marginRight="94dp"
        android:text="Welcome to TapBand"
        android:textColor="@color/MenuButtons"
        android:textSize="55sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="110dp"
        android:layout_height="60dp"
        android:layout_marginStart="175dp"
        android:layout_marginLeft="175dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/nextActivityButton"
        app:layout_constraintTop_toBottomOf="@+id/colorButton"
        app:srcCompat="@drawable/tapband" />

    <Button
        android:id="@+id/colorButton"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="294dp"
        android:layout_height="80dp"
        android:layout_marginTop="31dp"
        android:text="Change Color"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintStart_toEndOf="@+id/nextActivityButton"
        app:layout_constraintTop_toBottomOf="@+id/helpButton" />
</androidx.constraintlayout.widget.ConstraintLayout>